/*
 * Copyright 2021, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.testing;

// Testlib module doesn't have a dependency on base, thus the use of Spine options, namely
// (type_url) is omitted.
option java_multiple_files = true;
option java_outer_classname = "HospitalPolicyProto";
option java_package = "io.spine.testing";

import "spine/testing/prescription.proto";

// A policy that regulates kinds of patients accepted by the hospital.
message HospitalPolicy {

    // Conditions accepted by the hospital
    repeated PatientCondition accepted_condition = 1;

    enum PatientCondition {
        UNDETERMINED = 0;
        GOOD = 1;
        SATISFACTORY = 2;
        FAIR = 3;
        SERIOUS_BUT_STABLE = 4;
        SERIOUS = 5;
        CRITICAL_BUT_STABLE = 6;
        CRITICAL = 7;
        DEAD = 8;
    }
}
